--- a/www/css/index.css
+++ b/www/css/index.css
@@ -19,17 +19,22 @@ body {
 }
 
 
-/* DOCUMENT */
+/*! DOCUMENT */
 
 :root {
     --color-dark: black;
     --color-bright: white;
+    --color-action: rgb(30, 113, 190);
 }
+
+
+/* NAV-BAR */
 
 .nav-bar {
     background-color: var(--color-dark);
     color: var(--color-bright);
     position: fixed;
+    z-index: 1337;
     width: 100%;
 }
 
@@ -40,20 +45,171 @@ body {
 
 .nav-bar>ul>li {
     align-self: flex-end;
-    padding: 1rem 1rem;
 }
+
+.nav-bar a {
+    padding: 1rem 1rem;
+    display: inline-block;
+}
+
+.nav-bar li:hover {
+    transition: 450ms;
+    background-color: var(--color-action);
+}
+
+.nav-bar a:active {
+    opacity: 0.7;
+}
+
+
+/* MAIN */
 
 .landing {
     position: relative;
     top: 4rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
-.landing>header {
+
+/* HEADER */
+
+.landing> :first-child {
+    order: 1;
+    padding-bottom: 1rem;
     text-align: center;
 }
 
 .landing__portrait {
-    width: 16rem;
+    max-width: 180px;
     border: 0.9rem solid var(--color-dark);
     border-radius: 50%;
+}
+
+.landing>header>h1 {
+    font-size: 9vw;
+    font-weight: bolder;
+}
+
+
+/* CONTENT */
+
+.landing>section {
+    max-width: 700px;
+    margin: 1rem;
+}
+
+.landing section p {
+    margin-bottom: 1rem;
+}
+
+.landing> :nth-child(2) {
+    order: 2;
+}
+
+.landing .call-2-action a {
+    display: inline-block
+}
+
+.landing .call-2-action {
+    padding: 0.5rem 2.5rem;
+    background-color: var(--color-action);
+    color: var(--color-bright);
+    border: none;
+    margin-bottom: 2rem;
+}
+
+.landing> :nth-child(3) {
+    order: 3;
+}
+
+.landing>section>h2 {
+    font-weight: bold;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.landing ul {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3rem;
+}
+
+.landing li {
+    list-style: disc;
+    margin-left: 1rem;
+}
+
+
+/* ABOUT */
+
+.about>header>h1 {
+    margin-bottom: 1rem;
+}
+
+article.landing.about>:last-child {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+article.landing.about>header {
+    order: 1;
+    flex-grow: 1;
+}
+
+article.landing.about>section {
+    order: 2;
+    flex-grow: 2;
+}
+
+article.landing.about img.banner {
+    order: 2;
+    background-image: url('http://source.unsplash.com/600x200/?music');
+    margin-bottom: 1rem;
+}
+
+article.landing.about p:last-child {
+    order: 3;
+}
+
+
+}
+@media (min-width: 700px) {
+    .landing>header>h1 {
+        font-size: 9vw;
+        font-weight: bolder;
+        flex-grow: 2;
+    }
+}
+@media (min-width: 1000px) {
+    .landing {
+        flex-direction: row;
+        align-items: flex-start;
+        */
+    }
+    
+    .landing> :first-child {
+        text-align: right;
+    }
+    
+    .landing>header,
+    .landing>section {
+        max-width: 400px;
+    }
+    
+    .landing.about>section {
+        max-width: 60vw;
+    }
+    
+    .landing h3 {
+        font-size: 2rem;
+    }
+    
+    .landing.about {
+        justify-content: space-evenly;
+    }
 }
