--- a/www/css/index.css
+++ b/www/css/index.css
@@ -68,7 +68,7 @@ body {
     position: relative;
     top: 4rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -98,7 +98,7 @@ body {
 /* CONTENT */
 
 .landing>section {
-    max-width: 700px;
+    max-width: 600px;
     margin: 1rem;
 }
 
@@ -110,16 +110,16 @@ body {
     order: 2;
 }
 
-.landing .call-2-action a {
-    display: inline-block
-}
-
 .landing .call-2-action {
     padding: 0.5rem 2.5rem;
     background-color: var(--color-action);
     color: var(--color-bright);
     border: none;
     margin-bottom: 2rem;
+}
+
+.landing .call-2-action a {
+    display: inline-block
 }
 
 .landing> :nth-child(3) {
@@ -163,7 +163,6 @@ article.landing.about>header {
 
 article.landing.about>section {
     order: 2;
-    flex-grow: 2;
 }
 
 article.landing.about img.banner {
@@ -185,11 +184,10 @@ article.landing.about p:last-child {
         flex-grow: 2;
     }
 }
-@media (min-width: 1000px) {
+@media (min-width: 900px) {
     .landing {
         flex-direction: row;
         align-items: flex-start;
-        */
     }
     
     .landing> :first-child {
@@ -202,7 +200,8 @@ article.landing.about p:last-child {
     }
     
     .landing.about>section {
-        max-width: 60vw;
+        min-width: 50vw;
+        flex-grow: 2;
     }
     
     .landing h3 {
@@ -210,6 +209,6 @@ article.landing.about p:last-child {
     }
     
     .landing.about {
-        justify-content: space-evenly;
+        justify-content: center;
     }
 }
