--- a/www/public/share/css/reset.css
+++ b/www/public/share/css/reset.css
@@ -29,6 +29,12 @@ textarea {
     line-height: 1.15;
 }
 
+button {
+    border: none;
+    background-color: inherit;
+    color: inherit;
+}
+
 fieldset {
     border: none;
 }
