--- a/www/vacas/css/vacas.css
+++ b/www/vacas/css/vacas.css
@@ -1,4 +1,4 @@
-/*!     IMPORTS     */
+/*!     IMPORTS     ---------------------------------------------- */
 
 
 /*       RESET      */
@@ -11,10 +11,7 @@
 @import "../../public/share/css//firefox.css";
 @import "../../public/share/css//ie.css";
 
-/* ------------------------------------------------------------------------- */
-
-
-/* ! FONTS */
+/* ! FONTS -------------------------------------------------------- */
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
 body {
@@ -22,17 +19,14 @@ body {
 }
 
 
-/* ------------------------------------------------------------------------- */
-
-
-/*! COLORS */
+/*! COLORS -------------------------------------------------------- */
 
 :root {
     --color-bright: rgb(255, 255, 255);
     --color-dark: black;
     --color-corp: #f58021;
     --color-medium: gray;
-    --bg-header: url(https://images.pexels.com/photos/422218/pexels-photo-422218.jpeg?cs=srgb&dl=pexels-matthias-zomer-422218.jpg&fm=jpg)
+    --bg-header: url(https://images.pexels.com/photos/325257/pexels-photo-325257.jpeg?cs=srgb&dl=pexels-matthias-zomer-325257.jpg&fm=jpg);
 }
 
 
@@ -83,14 +77,15 @@ input[type="checkbox"]:checked+label:after {
 }
 
 
-/* ------------------------------------------------------------------------- */
+/*! ------------------------------------------------------------------------- */
 
 body {
     display: flex;
     flex-direction: column;
 }
 
-a {
+a,
+label {
     display: inline-block;
     cursor: pointer;
 }
@@ -121,7 +116,7 @@ header>* {
 
 header>h1 {
     order: 2;
-    text-shadow: 1px 1px 100px px black;
+    text-shadow: 1px 1px 100px black;
 }
 
 
@@ -144,7 +139,8 @@ header>section {
     order: 3;
 }
 
-header>section>a {
+header>section>a,
+form> :last-child {
     margin-top: 0.7rem;
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
@@ -161,15 +157,20 @@ main {
 }
 
 h1 {
-    margin-bottom: 1rem;
     font-size: 2.5rem;
 }
 
-main>article {
+main>article,
+main>section>article>h1,
+form,
+label,
+main>section>article> :last-child>a {
     padding: 1rem;
 }
 
-main p {
+main p,
+h1,
+legend {
     margin-bottom: 1rem;
 }
 
@@ -178,18 +179,14 @@ main p {
 
 main section {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    flex-wrap: wrap;
     text-align: center;
 }
 
 main>section>article {
-    max-width: 300px;
     margin: 1rem;
-}
-
-main>section>article>h1 {
-    padding: 1rem;
+    max-width: 300px;
 }
 
 main>section>article p {
@@ -198,7 +195,6 @@ main>section>article p {
 
 main>section>article> :last-child>a {
     width: 100%;
-    padding: 1rem;
 }
 
 
@@ -207,41 +203,33 @@ main>section>article> :last-child>a {
 
 /* FORM */
 
-form {
-    padding: 1rem;
-}
-
 legend {
     font-size: 2rem;
-    margin-bottom: 1rem;
 }
 
 label {
-    display: inline-block;
-    padding: 1rem 0;
     font-weight: bold;
-    cursor: pointer;
 }
 
 input,
 select {
-    min-width: 100%;
     padding: 0.3rem;
+    min-width: 100%;
 }
 
 form> :last-child {
     display: inline-block;
-    margin-top: 0.7rem;
-    padding: 0.5rem 1rem;
-    font-size: 0.8rem;
 }
+
+
+/* CHECKBOX */
 
 input[type="checkbox"] {
     visibility: hidden;
 }
 
 input[type="checkbox"]+label:after {
-    content: '';
+    content: "";
     display: inline-block;
     width: 0.8rem;
     height: 0.8rem;
@@ -250,7 +238,7 @@ input[type="checkbox"]+label:after {
 }
 
 input[type="checkbox"]:checked+label:after {
-    content: '\2713';
+    content: "\2713";
     text-align: center;
     font-weight: bold;
 }
@@ -279,16 +267,21 @@ input[type="checkbox"]:checked+label:after {
         justify-content: flex-start;
     }
     header>nav {
-        max-width: 33vw;
+        max-width: 32vw;
     }
     header>nav>ul {
         justify-content: flex-start;
+    }
+    header section:last-child {
+        padding-right: 5vw;
+        text-align: right;
     }
 }
 
 @media (min-width: 700px) {
     header {
         flex-direction: row;
+        justify-content: space-around;
         max-height: 576px;
     }
     header,
@@ -297,6 +290,34 @@ input[type="checkbox"]:checked+label:after {
     }
     form {
         margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+    }
+    form>fieldset:nth-child(2) {
+        display: flex;
+        justify-content: space-between;
+        flex-shrink: 1;
+    }
+    input,
+    select {
+        padding: 0.3rem;
+    }
+    label,
+    input,
+    select {
+        width: 23vw;
+    }
+    form>fieldset:nth-child(3) {
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 1;
+    }
+    select {
+        width: 20vw;
+        min-width: 50%;
+    }
+    form>fieldset:last-child {
+        width: 1vw;
     }
 }
 
@@ -307,14 +328,5 @@ input[type="checkbox"]:checked+label:after {
 }
 
 header>* {
-    outline: 1px solid red;
-    ;
-}
-
-header>*>* {
-    outline: 1px solid green
-}
-
-header>*>*>* {
-    outline: 1px solid blue;
+    border: 1px solid red;
 }
