--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import "./public/share/css/reset.css";
+@import "./www/public/share/css/reset.css";
 body {
     max-width: 100vw;
     background-color: rgb(54, 54, 54);
