--- a/index.css
+++ b/index.css
@@ -26,15 +26,14 @@ h1 {
     font-weight: bold;
 }
 
-
-/* h1::before {
+h1::before {
     content: 'JSC07CO';
     opacity: 0.2;
     top: 1vh;
     left: 1.5rem;
     right: 1rem;
     position: absolute;
-} */
+}
 
 ul {
     display: flex;
