--- a/www/training/css/02-boxBasic.css
+++ b/www/training/css/02-boxBasic.css
@@ -1,150 +1,176 @@
-/*!     IMPORTS     */
-
-
-/*       RESET      */
-
-@import "../public/share/css/reset.css";
-
-/*    COMPATIBILITY */
-
-@import "../public/share/css/ios.css;";
-@import "../public/share/css/firefox.css";
-@import "../public/share/css/ie.css";
-
-/*      FONTS       */
-
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
-body {
-    font-family: "Roboto", sans-serif;
-}
-
-
-/*! DOCUMENT */
-
-:root {
-    --color-dark: black;
-    --color-bright: white;
-    --color-action: rgb(121, 98, 98);
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-
-/* HEADER */
-
-header {
-    padding: 2rem 1rem 3rem;
-    background-color: var(--color-dark);
-    color: var(--color-bright);
-    text-align: center;
-}
-
-header>h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-}
-
-header>p {
-    margin-top: 1rem;
-    font-size: 0.8rem;
-}
-
-
-/* ARTICLE */
-
-main {
-    padding: 1rem 1rem 6rem;
-    max-width: 430px;
-}
-
-article {
-    display: flex;
-    flex-direction: column;
-}
-
-h1 {
-    order: 1;
-    margin-bottom: 1rem;
-    font-size: 1.4rem;
-    border-bottom: 1px solid black;
-}
-
-article>img {
-    order: 2;
-    max-width: 100%;
-    width: 100vw;
-    height: 40vh;
-    background-image: url(https://source.unsplash.com/400x300/?womanface);
-    background-repeat: no-repeat;
-    background-size: contain;
-    margin-bottom: 1rem;
-}
-
-article>p {
-    order: 3;
-    margin-bottom: 1rem;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-form>fieldset>* {
-    margin-top: 0.4rem;
-}
-
-label {
-    display: block;
-}
-
-input,
-textarea {
-    width: 100%;
-    line-height: 2rem;
-    background-color: var(--color-action);
-    border: none;
-}
-
-button {
-    margin-top: 1rem;
-    padding: 0.6rem;
-    width: 25vw;
-    background-color: var(--color-dark);
-    color: var(--color-bright);
-}
-
-@media (min-width: 430px) {
-    main {
-        max-width: 100%;
-    }
-    article {
-        flex-direction: column;
-        align-content: flex-end;
-    }
-    article>img {
-        order: 2;
-        max-width: 100%;
-        flex-grow: 1;
-        height: 25vh;
-        background-image: url(https://source.unsplash.com/400x300/?womanface);
-        background-repeat: no-repeat;
-        background-size: contain;
-        margin-bottom: 1rem;
-        align-self: flex-end;
-    }
-    article>p:first-of-type {
-        flex-grow: 2;
-        width: 60vw;
-    }
-}
-
-@media (min-width:700px) {
-    main {
-        max-width: 700px;
-    }
-}
+        /*!     IMPORTS     */
+        /*       RESET      */
+        
+        @import "../../public/share/css/reset.css";
+        /*    COMPATIBILITY */
+        
+        @import "../../public/share/css/ios.css;";
+        @import "../../public/share/css/firefox.css";
+        @import "../../public/share/css/ie.css";
+        /*      FONTS       */
+        
+        @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
+        body {
+            font-family: "Roboto", sans-serif;
+        }
+        /*! DOCUMENT */
+        /* COLORS */
+        
+         :root {
+            --color-dark: black;
+            --color-bright: white;
+            --color-action: rgb(121, 98, 98);
+        }
+        
+        header {
+            background-color: var(--color-dark);
+            color: var(--color-bright);
+        }
+        
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        /* HEADER */
+        
+        header {
+            padding: 1rem 1rem 3rem;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
+        
+        header>h1 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+        
+        header>p {
+            margin-top: 1rem;
+            font-size: 0.8rem;
+        }
+        /* ARTICLE */
+        
+        main {
+            padding: 1rem 1rem 6rem;
+            max-width: 430px;
+        }
+        
+        article {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+        }
+        
+        h1 {
+            border-bottom: 1px solid var(--color-dark);
+            font-size: 1.4rem;
+            margin-bottom: 1rem;
+        }
+        
+        article>h1 {
+            order: 1;
+        }
+        
+        article>img {
+            order: 2;
+            max-width: 100%;
+            height: 40vh;
+            background-image: url(https://source.unsplash.com/400x300/?womanface);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            margin-bottom: 1rem;
+        }
+        
+        article>p:first-of-type {
+            order: 3;
+            margin-bottom: 1rem;
+        }
+        
+        article>p:nth-of-type(2) {
+            order: 4;
+        }
+        
+        form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: stretch;
+        }
+        
+        fieldset {
+            display: flex;
+            flex-direction: column;
+        }
+        
+        form>fieldset>* {
+            margin-top: 0.4rem;
+        }
+        
+        input,
+        textarea {
+            width: 100%;
+            line-height: 2rem;
+            background-color: var(--color-action);
+            border: none;
+        }
+        
+        button {
+            margin-top: 1rem;
+            padding: 0.6rem;
+            width: 25vw;
+            background-color: var(--color-dark);
+            color: var(--color-bright);
+        }
+        
+        @media (min-width: 700px) {
+            header {
+                padding: 2rem 2rem 3rem;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                text-align: left;
+            }
+            header>h1 {
+                font-size: 6vh;
+            }
+            main {
+                padding: 1rem 1rem 6rem;
+                max-width: 700px;
+            }
+            article {
+                flex-direction: row;
+                justify-content: flex-start;
+                flex-wrap: wrap;
+                margin-bottom: 3rem;
+            }
+            article>img {
+                order: 3;
+                max-width: 100%;
+                width: 40%;
+                height: 250px;
+                flex-grow: 1;
+            }
+            article>h1 {
+                width: 100%;
+                order: 1;
+                flex-grow: 2;
+            }
+            article>p:first-of-type {
+                order: 2;
+                width: 40%;
+                margin-right: 1rem;
+                margin-bottom: 1rem;
+                flex-grow: 1;
+            }
+            article>p:nth-of-type(2) {
+                order: 4;
+                flex-grow: 2;
+            }
+            button {
+                width: 15vw;
+            }
+        }
