--- a/www/vacas/css/vacas.css
+++ b/www/vacas/css/vacas.css
@@ -250,75 +250,30 @@ input[type="checkbox"]:checked+label:after {
 
 /* RESPONSIVE */
 
-@media (min-height: 500px) {
-    p {
-        font-size: 2.5vh;
-    }
-    h1,
-    legend {
-        font-size: 7vh;
-    }
-}
-
-@media (min-width: 500px) {
-    header {
-        padding: 3vh 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-    }
-    header>nav {
-        max-width: 32vw;
-    }
-    header>nav>ul {
-        justify-content: flex-start;
-    }
-    header section:last-child {
-        padding-right: 5vw;
-        text-align: right;
-    }
-    form {
-        margin-top: 3rem;
-        display: flex;
-        flex-direction: column;
-    }
-    form>fieldset:nth-child(2) {
-        display: flex;
-        justify-content: space-between;
-        flex-shrink: 1;
-    }
-    input,
-    select {
-        padding: 0.3rem 0;
-    }
-    label,
-    input,
-    select {
-        width: 23vw;
-    }
-    form>fieldset:nth-child(3) {
-        display: flex;
-        flex-direction: column;
-        flex-shrink: 1;
-    }
-    select {
-        width: 20vw;
-        min-width: 50%;
-    }
-    form>fieldset:last-child {
-        width: 1vw;
-    }
-}
-
 @media (min-width: 700px) {
     header {
+        padding-top: 2rem;
         flex-direction: row;
-        justify-content: space-around;
-        max-height: 576px;
+        justify-content: space-be;
     }
-    header,
-    main {
-        max-width: 1024px;
+    header>nav>ul {
+        width: 25vw;
+        justify-content: flex-start;
+    }
+    header>h1 {
+        font-size: 4rem;
+        width: 50vw;
+        flex-grow: 2;
+        order: 2;
+        text-shadow: 1px 1px 100px black;
+    }
+    header>div {
+        padding-right: 3vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        width: 25vw;
+        order: 3;
     }
 }
 
