--- a/www/vacas/css/vacas.css
+++ b/www/vacas/css/vacas.css
@@ -137,13 +137,12 @@ header>nav>ul>li>a {
 /* HEADER C2A */
 
 header>div {
-    align-self: flex-end;
+    align-self: center;
     order: 3;
 }
 
 header>div>section>a,
 form> :last-child {
-    border: 1px solid red;
     margin-top: 0.7rem;
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
@@ -313,15 +312,14 @@ input[type="checkbox"]:checked+label:after {
     form>fieldset:last-child {
         width: 1vw;
     }
-}
-
-header>div {
-    padding-right: 3vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    width: 25vw;
-    order: 3;
+    header>div {
+        padding-right: 3vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        width: 25vw;
+        order: 3;
+    }
 }
 
 @media (min-width: 1024px) {
