--- a/www/vacas/css/vacas.css
+++ b/www/vacas/css/vacas.css
@@ -15,7 +15,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -80,11 +80,6 @@ input[type="checkbox"]:checked+label:after {
 
 /*! ------------------------------------------------------------------------- */
 
-body {
-    display: flex;
-    flex-direction: column;
-}
-
 a,
 label {
     display: inline-block;
@@ -124,6 +119,7 @@ header>h1 {
 /* ARTICLE NAV */
 
 header>nav>ul {
+    margin-top: 1rem;
     order: 1;
     display: flex;
     justify-content: space-between;
@@ -264,7 +260,8 @@ input[type="checkbox"]:checked+label:after {
     header {
         padding-top: 2rem;
         flex-direction: row;
-        justify-content: space-be;
+        align-items: stretch;
+        justify-content: center;
     }
     header>div {
         order: 3;
@@ -281,37 +278,6 @@ input[type="checkbox"]:checked+label:after {
         order: 2;
         text-shadow: 1px 1px 100px black;
     }
-    form {
-        margin-top: 3rem;
-        display: flex;
-        flex-direction: column;
-    }
-    form>fieldset:nth-child(2) {
-        display: flex;
-        justify-content: space-between;
-        flex-shrink: 1;
-    }
-    input,
-    select {
-        padding: 0.3rem 0;
-    }
-    label,
-    input,
-    select {
-        width: 23vw;
-    }
-    form>fieldset:nth-child(3) {
-        display: flex;
-        flex-direction: column;
-        flex-shrink: 1;
-    }
-    select {
-        width: 20vw;
-        min-width: 50%;
-    }
-    form>fieldset:last-child {
-        width: 1vw;
-    }
     header>div {
         width: 250px;
         flex-grow: 1;
@@ -319,28 +285,43 @@ input[type="checkbox"]:checked+label:after {
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        align-self: flex-start;
+        align-self: baseline;
         order: 3;
+    }
+    header>div>section {
+        margin-top: 2rem;
+        height: 100px;
+        vertical-align: middle;
+    }
+    form {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+    }
+    form>fieldset:nth-child(2) {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    form>fieldset:nth-child(2)>*,
+    form>fieldset:nth-child(3) {
+        width: 49%;
+    }
+    input,
+    select,
+    textarea {
+        padding: 0.3rem 0;
+        margin: 1rem 0;
+    }
+    form>fieldset:last-child {
+        width: 1vw;
     }
 }
 
 @media (min-width: 1024px) {
     body {
+        display: flex;
+        flex-direction: column;
         align-items: center;
     }
-}
-
-
-/* WORKING LINES */
-
-header>* {
-    outline: 1px solid red;
-}
-
-header>*>* {
-    outline: 1px solid green;
-}
-
-header>*>*>* {
-    outline: 1px solid blue
 }
